--- a/style.css
+++ b/style.css
@@ -88,14 +88,17 @@ button:hover{
 }
 /* End of mobile nav*/
 #welcome-section{
-  dsiplay: grid;
-  height: 100vh;
-  width: 100%;
-  text-align: center;
+    height: 100vh;
+    position: relative;
 }
 .welcome-text{
-  place-self: center;
-  font-size: 50px;
+    font-size: 50px;
+    margin: 0;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    margin-right: -50%;
+    transform: translate(-50%, -50%);
 }
 @media only screen and (max-width: 800px){
     .desktop-nav{
